# CMake_Learn

./: README.md
Hello_CMake/01-Hello_CMake/: CMakeLists.txt  main.cpp
Hello_CMake/02-Hello_func/: CMakeLists.txt
Hello_CMake/03-Hello_test/: CMakeLists.txt  hello.cpp
Hello_CMake/04-Hello_test_advance/: CMakeLists.txt  main.cpp
Hello_CMake/05-move_catch/: CMakeLists.txt
Hello_CMake/06-target_catch/: CMakeLists.txt
Hello_CMake/07-project_structure/test/: CMakeLists.txt
Hello_CMake/08-properties_options/: CMakeLists.txt
Hello_CMake/08-properties_options/src/: CMakeLists.txt  hello.cpp  hello.h
Hello_CMake/08-properties_options/test/: CMakeLists.txt
